--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.12.1",
     "firebase": "^9.19.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
