--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.19.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-avatar-edit": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.0",
